--- a/CrossLink/CrossLink.csproj
+++ b/CrossLink/CrossLink.csproj
@@ -15,6 +15,15 @@
     <RepositoryUrl>https://github.com/archi-Doc/CrossLink</RepositoryUrl>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\CrossLinkGenerator\bin\$(Configuration)\netstandard2.0\CrossLinkGenerator.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+  </ItemGroup>
+
   <ItemGroup>
     <AdditionalFiles Include="..\stylecop.json" Link="stylecop.json" />
   </ItemGroup>
