--- a/ValueLinkGenerator/Properties/launchSettings.json
+++ b/ValueLinkGenerator/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ValueLinkGenerator": {
       "commandName": "DebugRoslynComponent",
-      "targetProject": "..\\Sandbox\\Sandbox.csproj"
+      "targetProject": "..\\xUnitTest\\xUnitTest.csproj"
     }
   }
 }
