--- a/QuickStart/QuickStart.csproj
+++ b/QuickStart/QuickStart.csproj
@@ -16,11 +16,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Tinyhand" Version="0.48.1" />
+    <PackageReference Include="Tinyhand" Version="0.50.4" />
   </ItemGroup>
 
 </Project>
