--- a/ValueLink/ValueLink.csproj
+++ b/ValueLink/ValueLink.csproj
@@ -30,7 +30,7 @@
 
   <ItemGroup>
     <PackageReference Include="Arc.Collections" Version="1.6.0" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
