--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -15,4 +15,8 @@
     <Compile Remove="Generated\*" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Arc.Unit" Version="0.11.2" />
+  </ItemGroup>
+
 </Project>
