--- a/ValueLink/ValueLink.csproj
+++ b/ValueLink/ValueLink.csproj
@@ -13,6 +13,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/archi-Doc/ValueLink</PackageProjectUrl>
     <RepositoryUrl>https://github.com/archi-Doc/ValueLink</RepositoryUrl>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -35,7 +36,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Tinyhand" Version="0.77.2" />
+    <PackageReference Include="Tinyhand" Version="0.78.0" />
   </ItemGroup>
 
 </Project>
