--- a/ValueLinkGenerator/ValueLinkGenerator.csproj
+++ b/ValueLinkGenerator/ValueLinkGenerator.csproj
@@ -15,6 +15,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/archi-Doc/ValueLink</PackageProjectUrl>
     <RepositoryUrl>https://github.com/archi-Doc/ValueLink</RepositoryUrl>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
