--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <LangVersion>Preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Arc.Unit" Version="0.19.2" />
-    <PackageReference Include="Netsphere" Version="0.23.0" />
+    <PackageReference Include="Netsphere" Version="0.23.1" />
   </ItemGroup>
 
 </Project>
